Updated colors, positioning etc on CSS file to ensure each item was visible

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,7 @@ html {
 body{
     font-family: '0tomanopee One', sans-serif;
     margin:0;
+    background-color:aqua;
 }
 
 /*Header and footer*/
@@ -23,11 +24,11 @@ body{
     left:0;
     bottom:0;
     box-sizing:border-box;
-    min-height:80px;
-    padding-top:5px;
+    min-height:50px;
+    padding-top:25px;
     text-align:center;
-    color:#fff;
-    background: color #000;
+    color:red;
+    background-color:aliceblue;
  }
 
  /*Game area-using relative values-responsive without using media queries*/
@@ -46,9 +47,33 @@ body{
     height:40px;
 }
 
+#messages {
+    height:20px;
+}
+
+.player {
+    background-color: lightblue;
+    float:left;
+    width:50%;
+}
+
+#player-image {
+    width:5%vh;
+}
+
+.computer {
+    background-color: lightblue;
+    float:right;
+    width:50%;
+}
+
+#computer-image {
+    width:5%vh;
+}
+
 .score-area {
     margin: 5px auto;
-    width: 60%;
+    width: 80%;
     font-size: 1.2rem;
 }
 
@@ -56,7 +81,6 @@ body{
     width: 85%;
     margin: 30px auto;
 }
-
 
 #score {
     color: green;
@@ -87,7 +111,7 @@ body{
 }
 
 .logo {
-    height: 100vh;
+    height: 10vh;
     padding-right: 5px;
 }
 
